--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -339,6 +339,7 @@ You can also submit anonymous test results to keep your own testing history and 
     <string name="common_save">Save</string>
     <string name="common_cancel">Cancel</string>
     <string name="auth_error_empty_name">Enter your name</string>
+    <string name="label_driver_version">GPU version driver</string>
 
 
 
