--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -350,6 +350,11 @@ GamesLibrary — це легкий каталог для відстеження 
 
 
     <string name="details_data_source_igdb">Дані взяті з API IGDB</string>
+    <string name="button_presets">Пресети</string>
+    <string name="title_presets">Збережені пресети</string>
+    <string name="no_presets_found">Пресети ще не знайдено.</string>
+    <string name="preset_applied">Пресет успішно застосовано.</string>
+    <string name="label_save_as_preset">Зберегти конфігурацію як новий пресет</string>
 
 
 </resources>
