--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -17,8 +17,8 @@ GamesLibrary — це легкий каталог для відстеження 
 </string>
     <string name="about_feature_fast_title">Швидкий перегляд бібліотеки</string>
     <string name="about_feature_fast_body">Плавний пошук, сортування та обране допоможуть впорядкувати колекцію.</string>
-    <string name="about_feature_anonymous_title">Анонімний обмін результатами</string>
-    <string name="about_feature_anonymous_body">Додавайте звіти тестувань без акаунтів і персональних даних.</string>
+    <string name="about_feature_anonymous_title">Oбмін результатами</string>
+    <string name="about_feature_anonymous_body">Додавайте звіти тестувань.</string>
     <string name="about_feature_open_title">Відкрита екосистема</string>
     <string name="about_feature_open_body">Створено для роботи з різними емуляторами та платформами в одному місці.</string>
     <string name="about_link_site_title">Сайт розробника</string>
@@ -27,9 +27,9 @@ GamesLibrary — це легкий каталог для відстеження 
     <string name="about_link_github_title">Репозиторій GitHub</string>
     <string name="about_link_github_subtitle">Вихідний код та issues</string>
     <string name="about_link_github_url">https://github.com/sashkinbro/GamesLibrary-Android</string>
-    <string name="about_footer">Розроблена Sashkin Apps © 2025</string>
+    <string name="about_footer">Розроблена Sashkin Apps © 2025-2026</string>
 
-    <string name="about_toggle_cyberpunk">Сучасна тема</string>
+    <string name="about_toggle_cyberpunk">Ігрова тема</string>
     <string name="title_ps_games_library">Ігри</string>
     <string name="subtitle_games_count">%1$d ігор</string>
     <string name="subtitle_error">Помилка</string>
