--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -434,4 +434,5 @@ You can also submit test results to keep your own testing history and help other
     <string name="auth_gate_benefit_guest">Guest</string>
 
 
+    <string name="rules_toast_read_first">Please read all rules first</string>
 </resources>
