--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="rules_toast_read_first">Будь ласка, спочатку прочитайте всі правила</string>
     <string name="app_name">GamesLibrary</string>
     <string name="home_title">Бібліотека ігор</string>
     <string name="home_button_all_games">Усі ігри</string>
